--- a/Projets/OhMyFood/package.json
+++ b/Projets/OhMyFood/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "scripts": {
     "sass": "sass --watch ./scss/main.scss:./css/style.css",
+    "ML": "sass --watch ./scss/ML.scss:./css/style-ML.css",
     "enchantee": "sass --watch ./scss/menu-enchantee.scss:./css/style-menu-enchantee.css ",
     "alafrancaise": "sass --watch ./scss/menu-alafrancaise.scss:./css/style-menu-alafrancaise.css",
     "papilles": "sass --watch ./scss/menu-papilles.scss:./css/style-menu-papilles.css",
     "gout": "sass --watch ./scss/menu-gout.scss:./css/style-menu-gout.css",
-    "prefix": "npx postcss ./css/style-menu-gout.css --use autoprefixer -d ./css/prefixed/"
+    "prefix": "npx postcss ./css/style-ML.css --use autoprefixer -d ./css/prefixed/"
   },
   "author": "",
   "license": "ISC",
