--- a/Projets/LaChouetteAgence/.htaccess
+++ b/Projets/LaChouetteAgence/.htaccess
@@ -8,3 +8,11 @@ ExpiresByType text/javascript "access plus 1 week"
 ExpiresDefault "access plus 2 days"
 </IfModule>
 # END Expires Headers
+
+SetOutputFilter DEFLATE
+AddOutputFilterByType DEFLATE text/html text/css text/plain text/xml application/x-javascript
+
+BrowserMatch ^Mozilla/4 gzip-only-text/html
+BrowserMatch ^Mozilla/4\.0[678] no-gzip
+BrowserMatch \bMSIE !no-gzip !gzip-only-text/html
+BrowserMatch \bMSI[E] !no-gzip !gzip-only-text/html
